SERVER-56518: Only record preimages for findAndModify deletes in multi-statement transactions when the recordPreImage collection option is set.

(cherry picked from commit a2f2a57609308271b2fce1cab9bbf7f08a5eda18)