src/mongo/db/op_observer_impl_test.cpp
@@ -1605,6 +1605,7 @@ TEST_F(OpObserverMultiEntryTransactionTest, TransactionPreImageTest) {
                                        << "z");
     OpObserver::OplogDeleteEntryArgs args;
     args.deletedDoc = &deletedDoc;
+    args.preImageRecordingEnabledForCollection = true;
     opObserver().aboutToDelete(opCtx(), nss1, deletedDoc);
     opObserver().onDelete(opCtx(), nss1, uuid1, 0, args);
 
@@ -1681,6 +1682,7 @@ TEST_F(OpObserverMultiEntryTransactionTest, PreparedTransactionPreImageTest) {
                                        << "z");
     OpObserver::OplogDeleteEntryArgs args;
     args.deletedDoc = &deletedDoc;
+    args.preImageRecordingEnabledForCollection = true;
     opObserver().aboutToDelete(opCtx(), nss1, deletedDoc);
     opObserver().onDelete(opCtx(), nss1, uuid1, 0, args);
 
